--- a/src/styles/productCard.css
+++ b/src/styles/productCard.css
@@ -1,6 +1,6 @@
 .disply-container{
   flex-grow: 3;
- 
+ margin-left: 16px;
 }
 .display-products{
  
@@ -66,6 +66,18 @@ padding-bottom: 6px;
     font-size: 1.4rem;
     color: orangered;
     cursor: pointer;
+  }
+  .no-result {
+    display: flex;
+   
+    height: 50vh;
+    width: 100%; 
+    text-align: center;
+  }
+  
+  .no-search {
+  margin: auto;
+    color: red;
   }
   
   @media screen and (max-width: 992px) {
