--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -48,13 +48,52 @@
     font-weight: 600;
     text-align: center;
   }
-
-  @media screen and (max-width: 992px) {
-    .cart-count{
-      
-        top: 15px;
-        right: 80px;
+  @media screen and (min-width: 992px) and (max-width: 1400px){
+    .navbar{
+        height: 10%;
+    }
+    .cart-count{  
+        top: 10px;
+        right: 120px;
        
       }
    
   }
+
+  @media screen and (min-width: 768px) and (max-width: 991px){
+    .navbar{
+        height: 7%;
+    }
+    .cart-count{     
+        top: 12px;
+        right: 70px;
+       
+      }
+   
+  }
+  @media screen and (min-width: 300px) and (max-width: 567px){
+    .navbar{
+        height: 6%;
+    }
+    .logo{
+      
+        font-size: 1.5rem;
+    }
+
+    .cart-count{     
+        top: 2px;
+        right: 36px;
+       
+      }
+      .nav-cart-btn{
+        font-weight: 600;
+        font-size: 1.5rem;
+    }
+    .cart-count{
+        width: 12px;
+        height: 12px;
+        font-size: 10px;
+    }
+   
+  }
+ 
