--- a/src/styles/productCard.css
+++ b/src/styles/productCard.css
@@ -80,9 +80,21 @@ padding-bottom: 6px;
     color: red;
   }
   
-  @media screen and (max-width: 992px) {
+  @media screen and (min-width: 768px) and (max-width: 992px) {
     .display-products{
       grid-template-columns: repeat(2,1fr);
+   
+  }
+}
+@media screen and (min-width: 568px) and (max-width: 767px) {
+  .display-products{
+    grid-template-columns: repeat(1,1fr);
+ 
+}
+}
+  @media screen and (min-width: 250px) and (max-width: 567px) {
+    .display-products{
+      grid-template-columns: repeat(1,1fr);
    
   }
   }
