--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -122,3 +122,19 @@
     .empty-cart{
         text-align: center;
     }
+
+  
+      @media screen and (min-width: 768px) and (max-width: 991px){
+        .cart-img{
+            width: 10%;
+       
+           
+        }
+        .cart-img img{
+            width: 100%;
+            height:100%;
+            border-radius: 10px;
+            object-fit: cover;
+        }
+       
+      }
