--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -36,7 +36,6 @@
         margin: 16px;
     }
     .cart-img{
-        width: 15%;
         width: 80px;
         height: 80px;
         border-radius: 10px;
@@ -124,17 +123,62 @@
     }
 
   
-      @media screen and (min-width: 768px) and (max-width: 991px){
+    @media screen and (min-width: 768px) and (max-width: 991px){
+     .cart-img{
+      width: 50px;
+      height: 50px;          
+        }
+        .increment-btn, .decrement-btn{
+            border: none;
+
+          }
+          .increment-btn span {
+            font-size: 1.2rem;
+            font-weight: 800;
+            color: green;
+          }
+          .decrement-btn span{
+            font-size: 1.2rem;
+            font-weight: 800;
+            color: red;
+            margin-top: -4px;
+          }
+          .quantity-div{            
+            gap: 0px;       
+        }
+          .cart-price{     
+            padding: 2px;              
+            font-size: 1.1rem;
+        }
+       
+      }
+      @media screen and (min-width: 300px) and (max-width: 567px){
         .cart-img{
-            width: 10%;
-       
-           
-        }
-        .cart-img img{
-            width: 100%;
-            height:100%;
-            border-radius: 10px;
-            object-fit: cover;
-        }
-       
+            width: 50px;
+            height: 50px;
+                 
+              }
+              .increment-btn, .decrement-btn{
+                border: none;
+
+              }
+              .increment-btn span {
+                font-size: 1.2rem;
+                font-weight: 800;
+                color: green;
+              }
+              .decrement-btn span{
+                font-size: 1.2rem;
+                font-weight: 800;
+                color: red;
+                margin-top: -4px;
+              }
+              .quantity-div{            
+                gap: 0px;
+            
+            }
+              .cart-price{     
+                padding: 2px;              
+                font-size: 1.1rem;
+            }
       }
